Update date-picker descriptions for doc site

--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -229,7 +229,7 @@
       ]
     },
     {
-      "component": "date-picker/date-picker",
+      "component": "date-picker",
       "status": "prod",
       "display-name": "Datepickers",
       "SLDS-component-path": "/components/datepickers"
