Split view update (#1950)
* Add annotations for split view

* Change theme of split view

* Made icon bigger in split view header, remove outline from focus

* Update ui text, add summary

* Add selected and focus state

--- a/packages/design-system/design-tokens/force-base/aliases/color.yml
+++ b/packages/design-system/design-tokens/force-base/aliases/color.yml
@@ -112,8 +112,9 @@ aliases:
   CINNAMON: "#844800"
   FUN_GREEN: "#028048"
   CERULEAN: "#00A1DF"
-  MYSTIC: "#DFE4EE"
+  MYSTIC: "#E4E9F3"
   TOREA_BAY: "#0B2399"
   EBONY_CLAY: "#2c3646"
   OXFORD_BLUE: "#333e4f"
   RIVER_BED: "#414c5e"
+  MISCHKA: "#CED5E1"
