--- a/packages/design-system/ui/components/split-view/tokens/background-color.yml
+++ b/packages/design-system/ui/components/split-view/tokens/background-color.yml
@@ -9,8 +9,8 @@ imports:
 - "../../../../design-tokens/force-base/aliases/color.yml"
 props:
   SPLIT_VIEW_COLOR_BACKGROUND:
-    value: '{!OXFORD_BLUE}'
+    value: '{!MYSTIC}'
     comment: Split View background color.
   SPLIT_VIEW_COLOR_BACKGROUND_ROW_HOVER:
-    value: '{!RIVER_BED}'
+    value: '{!WHITE_LILAC}'
     comment: Split View background color on row hover.
