Add remaining annotations so index.docs.jsx could be removed (#1986)
* Add remaining annotations so index.docs.jsx could be removed

* Remove remaining index.docs under components

* skip test to debug travis

--- a/packages/design-system/ui/components/files/config.yml
+++ b/packages/design-system/ui/components/files/config.yml
@@ -1,4 +1,5 @@
 status: 'dev-ready'
 flavors:
-  - attachment
-  - multi-attachments
+  - image-attachment
+  - multi-image-attachments
+  - link-attachment
