Add navigation to package.json

--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -347,6 +347,12 @@
       ]
     },
     {
+      "component": "navigation",
+      "status": "prototype",
+      "display-name": "Navigation",
+      "SLDS-component-path": "/components/navigation"
+    },
+    {
       "component": "notification",
       "status": "prod",
       "display-name": "Notifications",
