Add object shim for PhantomJS/TravisCI

--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -126,6 +126,7 @@
     "minimist": "^1.2.0",
     "mocha": "^3.1.2",
     "node-sass": "^3.7.0",
+    "object.entries": "^1.0.4",
     "phantomjs-prebuilt": "^2.1.7",
     "precommit-hook": "^3.0.0",
     "react": ">=15.4.1",
