--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -92,6 +92,7 @@
     "babel": "^6.5.2",
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.0",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.2",
     "babel-plugin-import-noop": "^1.0.1",
     "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
