Eslint Warn if no parens
"arrow-parens": [1, "always"]

--- a/packages/design-system-react/.eslintrc
+++ b/packages/design-system-react/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "eslint-config-slds",
   "parser": "babel-eslint",
     "rules": {
-      "import/no-unresolved": [2, { "ignore": ["^[~]"] }]
+      "import/no-unresolved": [2, { "ignore": ["^[~]"] }],
+      "arrow-parens": [1, "always"]
     }
 }
