--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -16,7 +16,7 @@
     "heroku-prebuild": "./scripts/heroku-prebuild.sh",
     "heroku-postbuild": "./scripts/heroku-postbuild.sh",
     "icons": "./node_modules/.bin/babel-node scripts/inline-icons.js",
-    "lint": "npm run lint-non-prod && eslint --config=./.eslintrc \"!(examples|tests)**/*.{js,jsx}\"",
+    "lint": "npm run lint-non-prod && eslint --config=./.eslintrc \"!(examples|tests)/**/*.{js,jsx}\"",
     "lint-non-prod": "eslint \"{examples,tests}/**/*.{js,jsx}\"",
     "lint-prod": "eslint --config=./.eslintrc \"{components,utilities}/**/*.{js,jsx}\"",
     "lint-staged": "lint-staged",
