Two line support for utility bar (#2025)
* Add support for two lines of text with utility bar item, add notification variant

* Fix example

* Add notificiation token for utility bar, lint

--- a/packages/design-system/design-tokens/components.yml
+++ b/packages/design-system/design-tokens/components.yml
@@ -9,6 +9,7 @@ imports:
 - ../ui/components/data-tables/tokens/spacing.yml
 - ../ui/components/docked-composer/tokens/color.yml
 - ../ui/components/docked-composer/tokens/sizing.yml
+- ../ui/components/docked-utility-bar/tokens/background-color.yml
 - ../ui/components/dynamic-icons/tokens/background-color.yml
 - ../ui/components/global-header/tokens/sizing.yml
 - ../ui/components/global-navigation/tokens/background-color.yml
