--- a/packages/design-system-react/.eslintrc
+++ b/packages/design-system-react/.eslintrc
@@ -1,6 +1,16 @@
 {
   "extends": "eslint-config-slds",
   "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 7,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true,
+      "jsx": true,
+      "impliedStrict": true,
+      "modules": true
+    }
+  },
   "rules": {
     "import/no-unresolved": [2, { "ignore": ["^[~]"] }],
     "arrow-parens": [1, "always"],
