--- a/packages/design-system/ui/components/files/config.yml
+++ b/packages/design-system/ui/components/files/config.yml
@@ -1,5 +1,5 @@
 status: 'dev-ready'
 flavors:
-  - image-attachment
-  - multi-image-attachments
+  - file-attachment
+  - multi-file-attachments
   - link-attachment
