Hotfix/utility bar token (#2062)
* Hotfix: Utility Bar Token

* Add focus token for utility bar notifications

--- a/packages/design-system/ui/components/docked-utility-bar/tokens/background-color.yml
+++ b/packages/design-system/ui/components/docked-utility-bar/tokens/background-color.yml
@@ -11,3 +11,6 @@ props:
   UTILITY_BAR_COLOR_BACKGROUND_NOTIFICATION_BADGE:
     value: '{!VALENCIA}'
     comment: Utility bar notifications badge background color.
+  UTILITY_BAR_COLOR_BACKGROUND_NOTIFICATION_FOCUS:
+    value: '{!CADET_BLUE}'
+    comment: Utility bar notifications focus background color.
