--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -16,6 +16,7 @@
     "heroku-prebuild": "./scripts/heroku-prebuild.sh",
     "heroku-postbuild": "./scripts/heroku-postbuild.sh",
     "icons": "./node_modules/.bin/babel-node scripts/inline-icons.js",
+    "link": "./scripts/npm-link.sh",
     "lint": "npm run lint-non-prod && eslint --config=./.eslintrc \"!(examples|tests)/**/*.{js,jsx}\"",
     "lint-non-prod": "eslint \"{examples,tests}/**/*.{js,jsx}\"",
     "lint-prod": "eslint --config=./.eslintrc \"{components,utilities}/**/*.{js,jsx}\"",
