--- a/packages/design-system/.travis.yml
+++ b/packages/design-system/.travis.yml
@@ -7,6 +7,7 @@ env:
     - DISPLAY=:99.0
 before_install:
   - nvm install 6
+  - npm version
   - sh -e /etc/init.d/xvfb start
   - npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
 install:
