chore(tokens): Update background relationships token name (#2265)

--- a/packages/design-system/design-tokens/bg-standard.yml
+++ b/packages/design-system/design-tokens/bg-standard.yml
@@ -303,5 +303,5 @@ props:
     value: '#7E8BE4'
   TIMESHEETS_ENTRIES:
     value: '#7DC37D'
-  ASSET_RELATIONS:
+  ASSET_RELATIONSHIPS:
     value: '#FA975C'
