feat(visual-picker): Rename hero-buttons to visual-picker (#2267)
* feat(visual-picker): Rename hero-buttons to visual-picker

* feat(utilities): Add fixed width utility for media figure, Add box utility to handle interactions if applied to an actionable element

* chore(visual-picker): Remove hero button folder, clean up documentation, rename variants

* chore(visual-picker): Rename variant folders

* chore(visual-picker): Add release notes

--- a/packages/design-system/ui/components/config.yml
+++ b/packages/design-system/ui/components/config.yml
@@ -24,7 +24,6 @@ components:
   - form-layout
   - global-header
   - global-navigation
-  - hero-buttons
   - icons
   - input
   - list-builder
@@ -56,4 +55,5 @@ components:
   - tooltips
   - trees
   - vertical-navigation
+  - visual-picker
   - walkthrough
