Move slds fonts to a new location accessible (whitelisted) from communities (#2366)
Communities wanted to whitelist a folder containing slds assets, but the name had to change because
- slds is already used as siteprefix in some existing communities
- prefixing with _ seems like a safe idea since communities aren't allowed to start with _
Hence the name _slds

--- a/packages/design-system/design-tokens/force-font-commons.yml
+++ b/packages/design-system/design-tokens/force-font-commons.yml
@@ -8,22 +8,22 @@ global:
   - src
 props:
   SALESFORCE_SANS_REGULAR_WOFF2:
-     value: /slds/fonts/v2.3.0/SalesforceSans-Regular.woff2
+     value: /_slds/fonts/v2.3.0/SalesforceSans-Regular.woff2
   SALESFORCE_SANS_REGULAR_WOFF:
-     value: /slds/fonts/v2.3.0/SalesforceSans-Regular.woff
+     value: /_slds/fonts/v2.3.0/SalesforceSans-Regular.woff
   SALESFORCE_SANS_LIGHT_WOFF2:
-     value: /slds/fonts/v2.3.0/SalesforceSans-Light.woff2
+     value: /_slds/fonts/v2.3.0/SalesforceSans-Light.woff2
   SALESFORCE_SANS_LIGHT_WOFF:
-     value: /slds/fonts/v2.3.0/SalesforceSans-Light.woff
+     value: /_slds/fonts/v2.3.0/SalesforceSans-Light.woff
   SALESFORCE_SANS_BOLD_WOFF2:
-     value: /slds/fonts/v2.3.0/SalesforceSans-Bold.woff2
+     value: /_slds/fonts/v2.3.0/SalesforceSans-Bold.woff2
   SALESFORCE_SANS_BOLD_WOFF:
-     value: /slds/fonts/v2.3.0/SalesforceSans-Bold.woff
+     value: /_slds/fonts/v2.3.0/SalesforceSans-Bold.woff
   SALESFORCE_SANS_BOLD_ITALIC_WOFF2:
-     value: /slds/fonts/v2.3.0/SalesforceSans-BoldItalic.woff2
+     value: /_slds/fonts/v2.3.0/SalesforceSans-BoldItalic.woff2
   SALESFORCE_SANS_BOLD_ITALIC_WOFF:
-     value: /slds/fonts/v2.3.0/SalesforceSans-BoldItalic.woff
+     value: /_slds/fonts/v2.3.0/SalesforceSans-BoldItalic.woff
   SALESFORCE_SANS_ITALIC_WOFF2:
-     value: /slds/fonts/v2.3.0/SalesforceSans-Italic.woff2
+     value: /_slds/fonts/v2.3.0/SalesforceSans-Italic.woff2
   SALESFORCE_SANS_ITALIC_WOFF:
-     value: /slds/fonts/v2.3.0/SalesforceSans-Italic.woff
+     value: /_slds/fonts/v2.3.0/SalesforceSans-Italic.woff
