--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -61,6 +61,7 @@
   "main": "components/index.js",
   "homepage": "https://react.lightningdesignsystem.com",
   "dependencies": {
+    "airbnb-prop-types": "^2.5.3",
     "babel-preset-stage-1": "^6.5.0",
     "classnames": "^2.1.3",
     "lodash.assign": "^4.0.9",
@@ -144,7 +145,7 @@
     "pre-commit": "^1.2.2",
     "react": ">=15.4.1",
     "react-addons-test-utils": ">=15.4.1",
-    "react-docgen": "^2.13.0",
+    "react-docgen": "^2.14.1",
     "react-dom": ">=15.4.1",
     "react-hot-loader": "^1.2.7",
     "react-test-renderer": "^15.4.1",
