--- a/packages/design-system/design-tokens/components.yml
+++ b/packages/design-system/design-tokens/components.yml
@@ -24,6 +24,9 @@ imports:
 - ../ui/components/progress-indicator/tokens/background-color.yml
 - ../ui/components/progress-indicator/tokens/border-color.yml
 - ../ui/components/progress-indicator/tokens/sizing.yml
+- ../ui/components/slider/tokens/background-color.yml
+- ../ui/components/slider/tokens/box-shadow.yml
+- ../ui/components/slider/tokens/sizing.yml
 - ../ui/components/split-view/tokens/background-color.yml
 - ../ui/components/split-view/tokens/border-color.yml
 - ../ui/components/vertical-navigation/tokens/background-color.yml
