--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -22,7 +22,7 @@
     "lint-non-prod": "eslint \"{examples,tests}/**/*.{js,jsx}\"",
     "lint-prod": "eslint --config=./.eslintrc \"{components,utilities}/**/*.{js,jsx}\"",
     "lint-staged": "lint-staged",
-    "preversion": "git add RELEASENOTES.md && git commit -m \"Update release notes\" && git pull upstream master && git diff --exit-code",
+    "preversion": "git add RELEASENOTES.md && git add icons/* && git commit -m \"Update release notes and inline icons (if needed)\" && git pull upstream master && git diff --exit-code",
     "publish-to-git": "./node_modules/.bin/babel-node scripts/publish-to-git.js",
     "publish-to-edge": "./node_modules/.bin/babel-node scripts/publish-to-git.js --tag=edge",
     "publish-to-upstream": "./node_modules/.bin/babel-node scripts/publish-to-git.js --remote=upstream",
