--- a/packages/design-system/ui/components/page-headers/tokens/spacing.yml
+++ b/packages/design-system/ui/components/page-headers/tokens/spacing.yml
@@ -19,6 +19,8 @@ global:
 imports:
 - "../../../../design-tokens/force-base/aliases/spacing.yml"
 props:
+  PAGE_HEADER_SPACING_MARGIN:
+    value: '0'
   PAGE_HEADER_SPACING_PADDING:
     value: '{!SPACING_MEDIUM}'
   PAGE_HEADER_SPACING_ROW:
