feat(dynamic-icons): add global help icon (#2734)
* Starter filse for dynamic icons global action plus

* feat(dynamic icon global plus) add mask hover

* feat(global action icon) finished plus icon

* changes

* feat(global-action dynamic icons) help button hover and active state animations

* feat(dynamic-icons): add tokens and help icon

* feat(dynamic-icons): add help icon

* saving all my changes

* Removed other icons

* feat(dynamic-icons) global help icon syntax fixes

--- a/packages/design-system/design-tokens/force-base/fill.yml
+++ b/packages/design-system/design-tokens/force-base/fill.yml
@@ -27,3 +27,6 @@ props:
   FILL_HEADER_BUTTON_HOVER:
     value: '{!ENDEAVOUR}'
     comment: 'Hovered header button icon color'
+  FILL_HEADER_BUTTON_FOCUS:
+    value: '{!SCIENCE_BLUE}'
+    comment: 'Focused header button icon color'
