fix(popovers): update background and styling of walkthrough popovers (#2792)
* fix(popovers): update background and styling of walkthrough popovers

* fix(popovers): add new nubbin colors

* fix(popovers): add feature variant, tests, and tokens

* chore(popovers): delete snapshots

* chore(popovers): add tests and specify port

* chore(popovers): extend Footer component in walkthrough

* chore(popovers): skip tests until port issue is resolved

* chore(popovers): remove title and add back tests

* chore(popovers): update snapshots

* chore(popovers): skip tests until hyphens issue is resolved

--- a/packages/design-system/design-tokens/salesforce-skin/background-color.yml
+++ b/packages/design-system/design-tokens/salesforce-skin/background-color.yml
@@ -97,3 +97,15 @@ props:
     value: '{!PALETTE_GRAY_2}'
   TABLE_COLOR_BACKGROUND_HEADER_HOVER:
     value: '{!PALETTE_GRAY_1}'
+  POPOVER_WALKTHROUGH_COLOR_BACKGROUND:
+    value: '#032e61'
+  POPOVER_WALKTHROUGH_HEADER_COLOR_BACKGROUND:
+    value: '#164A85'
+  POPOVER_WALKTHROUGH_COLOR_BACKGROUND_ALT:
+    value: '#164A85'
+  POPOVER_WALKTHROUGH_IMAGE:
+    value: '/assets/images/popovers/popover-body.png'
+    type: string
+  POPOVER_WALKTHROUGH_HEADER_IMAGE:
+    value: '/assets/images/popovers/popover-header.png'
+    type: string
