--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -89,6 +89,10 @@
     "tether-drop": "^1.4.2",
     "warning": "^3.0.0"
   },
+  "peerDependencies": {
+    "@salesforce-ux/design-system": "2.4.x",
+    "react": ">=15.4.1 <16"
+  },
   "devDependencies": {
     "@salesforce-ux/design-system": "2.4.3",
     "@salesforce-ux/icons": "7.x",
