--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -136,7 +136,7 @@
     "stream-exhaust": "1.0.1",
     "strip-ansi": "3.0.1",
     "strip-indent": "2.0.0",
-    "style-loader": "git@github.com:webpack-contrib/style-loader.git#ce53bd92b392e10940c7cc4ad56a780b47e7b1f0",
+    "style-loader": "0.19.0",
     "stylelint": "7.10.1",
     "stylelint-config-slds": "1.0.7",
     "stylestats": "7.0.1",
