fix(popovers): update walkthrough popovers (#2860)
* fix(popovers): update walkthrough popovers

* fix(popovers): remove background image and token

* fix(popovers): remove nubbin styling

* fix(popovers): add text-shadow to token cssProperties

fix(popovers): add text-shadow to design tokens cssProperties

--- a/packages/design-system/design-tokens/salesforce-skin/background-color.yml
+++ b/packages/design-system/design-tokens/salesforce-skin/background-color.yml
@@ -8,6 +8,7 @@ global:
   - 'background*'
   - 'border*'
   - box-shadow
+  - text-shadow
 imports:
 - ../force-base/aliases/color.yml
 - ./aliases/color.yml
@@ -135,9 +136,6 @@ props:
     value: '#164A85'
   POPOVER_WALKTHROUGH_COLOR_BACKGROUND_ALT:
     value: '#164A85'
-  POPOVER_WALKTHROUGH_IMAGE:
-    value: '/assets/images/popovers/popover-body.png'
-    type: string
   POPOVER_WALKTHROUGH_HEADER_IMAGE:
     value: '/assets/images/popovers/popover-header.png'
     type: string
