--- a/packages/design-system/design-tokens/brand/background-color.yml
+++ b/packages/design-system/design-tokens/brand/background-color.yml
@@ -11,20 +11,23 @@ global:
 imports:
 - ../color-palettes.yml
 props:
+  ## Spring '18
+  BRAND_BACKGROUND_PRIMARY:
+    value: "#AFC5DE"
+    comment: "Primary page background color"
+  BRAND_BACKGROUND_PRIMARY_TRANSPARENT:
+    value: "rgba(175,197,222,0)"
+    comment: "These RGBA values need to be updated if BRAND_BACKGROUND_PRIMARY changes, solves webkit bug"
+  BRAND_BACKGROUND_DARK:
+    value: "#205C9F"
+    comment: "Dark variant of BRAND_BACKGROUND_PRIMARY, used within gradient of background color"
+  BRAND_BACKGROUND_DARK_TRANSPARENT:
+    value: "rgba(32,92,159,0)"
+    comment: "These RGBA values need to be updated if BRAND_BACKGROUND_DARK changes, solves webkit bug"
+  ## Winter '18
   PAGE_COLOR_BACKGROUND_PRIMARY:
     value: '#AFC5DE'
     deprecated: true
-  ## BANNERS
-  BRAND_BAND_DEFAULT_IMAGE:
-    value: '/assets/images/themes/oneSalesforce/banner-brand-default.png'
-    type: string
-  BANNER_USER_DEFAULT_IMAGE:
-    value: '/assets/images/themes/oneSalesforce/banner-user-default.png'
-    type: string
-  BANNER_GROUP_DEFAULT_IMAGE:
-    value: '/assets/images/themes/oneSalesforce/banner-group-public-default.png'
-    type: string
-  ## BRAND BAND COLORS
   BRAND_BAND_COLOR_BACKGROUND_PRIMARY:
     value: '#AFC5DE'
     deprecated: true
