--- a/packages/design-system/ui/components/popovers/tokens/background-color.yml
+++ b/packages/design-system/ui/components/popovers/tokens/background-color.yml
@@ -21,3 +21,9 @@ props:
   POPOVER_WALKTHROUGH_HEADER_IMAGE:
     value: ''
     type: string
+  POPOVER_WALKTHROUGH_ALT_IMAGE:
+    value: ''
+    type: string
+  POPOVER_WALKTHROUGH_ALT_NUBBIN_COLOR_BACKGROUND:
+    value: "{!SCIENCE_BLUE}"
+    comment: The background color for nubbins on the bottom of alternate walkthrough popovers
