--- a/packages/design-system/ui/components/path/tokens/background-color.yml
+++ b/packages/design-system/ui/components/path/tokens/background-color.yml
@@ -15,6 +15,9 @@ props:
   COLOR_BACKGROUND_PATH_COMPLETE_HOVER:
     value: '{!SALEM}'
     comment: The hover background color for Salespath stages that are complete.
+  COLOR_BACKGROUND_PATH_ACTIVE:
+    value: '{!DEEP_COVE}'
+    comment: The background color for Salespath stages that are complete.
   COLOR_BACKGROUND_PATH_CURRENT:
     value: '{!SCIENCE_BLUE}'
     comment: The background color for Salespath stages that are the current stage.
@@ -29,6 +32,9 @@ props:
     comment: The hover background color for Salespath stages that have not been completed.
   COLOR_BACKGROUND_PATH_LOST:
     value: '{!FLUSH_MAHOGANY}'
+    comment: The background color for the final stage of a Salespath when it has been lost.
+  COLOR_BACKGROUND_PATH_WON:
+    value: '{!EMERALD}'
     comment: The background color for the final stage of a Salespath when it has been lost.
   COLOR_BACKGROUND_GUIDANCE:
     value: '{!PALETTE_GRAY_1}'
