--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -131,6 +131,7 @@
     "eslint-plugin-react": "^7.1.0",
     "express": "^4.15.5",
     "file-loader": "^0.11.0",
+    "find-remove": "^1.1.0",
     "fs-extra": "^3.0.0",
     "istanbul-instrumenter-loader": "^2.0.0",
     "jest": "^21.2.1",
@@ -306,12 +307,12 @@
       "display-name": "Icons",
       "SLDS-component-path": "/components/icons"
     },
-	{
-	  "component": "icon-settings",
-	  "status": "prod",
-	  "display-name": "Icon Settings",
-	  "SLDS-component-path": "/components/icons-settings"
-	},
+    {
+      "component": "icon-settings",
+      "status": "prod",
+      "display-name": "Icon Settings",
+      "SLDS-component-path": "/components/icons-settings"
+    },
     {
       "component": "filter",
       "status": "prototype",
@@ -451,7 +452,7 @@
       "display-name": "Progress Indicators",
       "SLDS-component-path": "/components/progress-indicator"
     },
-	{
+    {
       "component": "progress-ring",
       "status": "prod",
       "display-name": "Progress Ring",
