--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -323,13 +323,13 @@
       "component": "forms/input/inline",
       "status": "prod",
       "display-name": "Inline Edit Inputs",
-      "last-a11y-review": {
-        "date": "08/21/2017",
-        "commit": ""
+      "last-accessibility-review": {
+        "date-iso-8601": "2017/08/21",
+        "commit-sha": "119f7033c17a8a0634a31c6eeef947ddd0ee876b"
       },
-      "last-sldsMarkup-review": {
-        "date": "08/21/2017",
-        "commit": ""
+      "last-slds-markup-review": {
+        "date-iso-8601": "2017/08/21",
+        "commit-sha": "119f7033c17a8a0634a31c6eeef947ddd0ee876b"
       },
       "SLDS-component-path": "/components/forms#flavor-input"
     },
@@ -455,7 +455,15 @@
     {
       "component": "progress-ring",
       "status": "prod",
-      "display-name": "Progress Ring",
+      "display-name": "Progress Rings",
+      "last-accessibility-review": {
+        "date-iso-8601": "2017/11/28",
+        "commit-sha": "1b7025689af65ff2b92ad359c809970f2afd8439"
+      },
+      "last-slds-markup-review": {
+        "date-iso-8601": "2017/11/28",
+        "commit-sha": "1b7025689af65ff2b92ad359c809970f2afd8439"
+      },
       "SLDS-component-path": "/components/progress-ring"
     },
     {
