--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -14,7 +14,7 @@
     "build-docs": "./node_modules/.bin/babel-node ./scripts/build-docs.js",
     "build-storybook": "build-storybook -o ./storybook",
     "dist": "scripts/dist.sh",
-    "format": "./node_modules/.bin/prettier-eslint --write \"**/*.js\"",
+    "format": "./node_modules/.bin/prettier-eslint --write \"**/*.{js,jsx}\"",
     "heroku-prebuild": "./scripts/heroku-prebuild.sh",
     "heroku-postbuild": "./scripts/heroku-postbuild.sh",
     "icons": "./node_modules/.bin/babel-node scripts/inline-icons.js",
