--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -8,19 +8,19 @@
     "npm": "^3.9.0"
   },
   "lint-staged": {
-    "*.{js,jsx}": "eslint --quiet"
+    "*.{js,jsx}": "eslint"
   },
   "scripts": {
     "build-docs": "./node_modules/.bin/babel-node ./scripts/build-docs.js",
     "build-storybook": "build-storybook -o ./storybook",
     "dist": "scripts/dist.sh",
+    "format": "./node_modules/.bin/prettier-eslint --write \"**/*.js\"",
     "heroku-prebuild": "./scripts/heroku-prebuild.sh",
     "heroku-postbuild": "./scripts/heroku-postbuild.sh",
     "icons": "./node_modules/.bin/babel-node scripts/inline-icons.js",
     "link": "./scripts/npm-link.sh",
     "lint": "./node_modules/.bin/eslint \"**/*.{js,jsx}\"",
-    "lint-non-prod": "./node_modules/.bin/eslint \"{examples,tests}/**/*.{js,jsx}\"",
-    "lint-prod": "./node_modules/.bin/eslint \"{components,utilities}/**/*.{js,jsx}\"",
+    "lint-fix": "./node_modules/.bin/eslint --fix \"**/*.{js,jsx}\"",
     "lint-staged": "lint-staged",
     "publish-to-git": "./node_modules/.bin/babel-node scripts/publish-to-git.js",
     "publish-to-edge": "./node_modules/.bin/babel-node scripts/publish-to-git.js --tag=edge",
@@ -91,7 +91,8 @@
   },
   "peerDependencies": {
     "@salesforce-ux/design-system": "2.4.x",
-    "react": ">=15.4.1 <16"
+    "react": ">=15.4.1 <16",
+    "react-dom": ">=15.4.1 <16"
   },
   "devDependencies": {
     "@salesforce-ux/design-system": "2.4.3",
@@ -102,7 +103,7 @@
     "async": "^2.0.0-rc.5",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.0",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.0.2",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-import-noop": "^1.0.1",
@@ -115,7 +116,6 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-1": "^6.22.0",
     "basic-auth": "^1.0.4",
     "chai": "^4.0.1",
     "chai-enzyme": "^0.8.0",
@@ -123,7 +123,7 @@
     "css-loader": "^0.28.0",
     "enzyme": "^2.5.1",
     "enzyme-to-json": "^1.5.0",
-    "eslint": "^3.13.0",
+    "eslint": "^4.12.0",
     "eslint-config-airbnb": "15.1.0",
     "eslint-loader": "^1.6.0",
     "eslint-plugin-import": "^2.2.0",
@@ -148,6 +148,7 @@
     "karma-spec-reporter": "^0.0.31",
     "karma-webpack": "^2.0.2",
     "lint-staged": "^3.3.0",
+    "lodash.filter": "^4.6.0",
     "lodash.isempty": "^4.2.1",
     "lodash.kebabcase": "^4.0.1",
     "lodash.trim": "^4.0.1",
@@ -159,6 +160,9 @@
     "phantomjs-polyfill-includes": "^1.0.2",
     "phantomjs-prebuilt": "^2.1.15",
     "pre-commit": "^1.2.2",
+    "prettier": "~1.9",
+    "prettier-eslint": "~8.2",
+    "prettier-eslint-cli": "^4.4.2",
     "prompt": "^1.0.0",
     "react": ">=15.4.1 <16",
     "react-addons-test-utils": ">=15.4.1 <16",
@@ -182,6 +186,15 @@
     "validate",
     "test"
   ],
+  "prettier": {
+    "arrowParens": "always",
+    "bracketSpacing": true,
+    "jsxBracketSameLine": false,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "useTabs": true
+  },
   "components": [
     {
       "component": "accordion",
